[project]
name = "rmc-mcp"
version = "0.1.0"
description = "Recursive Meta-Cognition MCP Server - wraps prompts with meta-cognition instructions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25.0",
    "openai>=1.50.0",
]

[project.scripts]
rmc-mcp = "rmc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rmc_mcp"]
